--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 
     <button onclick="restart()">Restart</button>
     <button id="animateButton" onclick="startAnimation()" disabled>Animate</button>
+    <button id="setFormat1080x1080">1080x1080</button>
+    <button id="setFormat1080x1920">1080x1920</button>
+    <button id="exportVideo">Export Video</button>
   </div>
 
   <div id="canvasContainer"></div>
