--- a/index.html
+++ b/index.html
@@ -18,26 +18,23 @@
     }
     .controls {
       display: flex;
-      flex-direction: column;
+      flex-wrap: wrap; /* Allow wrapping if necessary */
+      flex-direction: row; /* Align controls in a row */
       align-items: center;
-      gap: 10px;
+      justify-content: center; /* Center the controls horizontally */
+      gap: 10px; /* Adjust space between controls */
       padding: 10px;
       background-color: #f9f9f9;
       width: 100%;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
-    label {
-      font-size: 14px;
-    }
-    input[type="range"] {
-      width: 60%;
-    }
     button {
-      padding: 10px 15px;
+      padding: 10px 15px; /* Adjust padding */
+      font-size: 14px; /* Adjust font size */
       background-color: #4CAF50;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 0; /* Remove rounded corners */
       cursor: pointer;
     }
     button:hover {
@@ -57,13 +54,14 @@
     <input type="range" id="densitySlider" min="0.1" max="1" step="0.1" value="0.8">
 
     <button onclick="restart()">Restart</button>
-    <button id="animateButton" onclick="startAnimation()" disabled>Animate</button>
+    <button id="animateAndExportButton" onclick="startAnimationAndExport()" disabled>Animate and Export</button>
     <button id="setFormat1080x1080">1080x1080</button>
     <button id="setFormat1080x1920">1080x1920</button>
-    <button id="exportVideo">Export Video</button>
   </div>
 
-  <div id="canvasContainer"></div>
+  <div id="canvasContainer" style="width: 100%; display: flex; justify-content: center;">
+    <!-- The canvas will appear here -->
+  </div>
 
   <!-- Include p5.js for drawing and CCapture.js for video capture -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
